--- a/templates/main_app/base1.html
+++ b/templates/main_app/base1.html
@@ -71,11 +71,13 @@
                                                 {% endif %}
                                             </ul>
                                         </li>
-                                        {% if user.is_developer %}
+                                        {% if user.is_authenticated %}
                                             <li class="nav-item dropdown">
                                             <a class="nav-link dropdown-toggle" href="#">admin</a>
                                             <ul class="dropdown-menu">
+                                                {% if user.is_developer %}
                                                 <li><a class="dropdown-item" href="{% url 'main_app:admin-my-project-list' %}">Dashboard</a></li>
+                                                {% endif %}
                                                 <li><a class="dropdown-item" href="{% url 'accounts:logout' %}">Logout</a></li>
                                             </ul>
                                         </li>
@@ -87,7 +89,11 @@
                                     {% if user.is_authenticated %}
                                     <ul class="navbar-nav border-start sm-mx-none ps-3">
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">
+                                            {% if user.is_developer %}
+                                            <a class="nav-link" href="{% url 'accounts:developer-profile' %}">
+                                            {% else %}
+                                            <a class="nav-link" href="{% url 'accounts:client-profile' %}">
+                                            {% endif %}
                                                 <i class="fas fa-user me-1"></i>
                                                 Welcome {{ user.username }}
                                             </a>
