--- a/templates/dashboards/base2.html
+++ b/templates/dashboards/base2.html
@@ -121,7 +121,8 @@
                                                     <li class="nav-item dropdown">
                                                         <a class="nav-link dropdown-toggle" href="blog-grid-classic.html">Dashboard Options</a>
                                                         <ul class="dropdown-menu">
-                                                            <li><a class="dropdown-item" href="#">My Account</a></li>
+                                                            <li><a class="dropdown-item" href="{% url 'main_app:admin-my-project-list' %}">My Projects</a></li>
+                                                            <li><a class="dropdown-item" href="{% url 'accounts:developer-profile' %}">My Account</a></li>
                                                         </ul>
                                                     </li>
                                                 </ul>
