--- a/templates/dashboards/my_admin.html
+++ b/templates/dashboards/my_admin.html
@@ -50,6 +50,11 @@
                     </tbody>
                 </table>
             </div>
+            <div class="dashboard-panel border bg-white rounded overflow-hidden w-100">
+                <div class="col">
+                    <a href="{% url 'main_app:add-project' %}" class="btn btn-outline-primary">Add New Project</a>
+                </div>
+            </div>
             <div class="col-lg-12 my-5">
                 <nav aria-label="Page navigation example">
                     <ul class="pagination pagination-dotted-active justify-content-center">
