--- a/templates/main_app/project_detail.html
+++ b/templates/main_app/project_detail.html
@@ -13,7 +13,7 @@
                                 <li class="breadcrumb-item active text-primary" aria-current="page">{{ project.name }}</li>
                             </ol>
                         </nav>
-                        <h3 class="text-secondary">{{ project.name }}</h3>
+                        <h3 class="text-secondary">{{ listing_title }}</h3>
                     </div>
                 </div>
             </div>
@@ -48,9 +48,15 @@
                 <div class="property-overview border summary rounded bg-white p-30 mb-30">
                     <div class="row">
                         <div class="col-md-12">
+                            {% for image in project_images  %}
                             <div id="single-property" style="width:1200px; height:600px; margin:0 auto 30px;">
-                                <img width="600" src="{% static 'images/no_image.jpg' %}" class="ls-bg" alt="" />
-                            </div>
+                                <img width="400" src="/media/{{ image.image }}" class="ls-bg" alt="No image" />
+                             </div>
+                            {% empty %}
+                             <div id="single-property" style="width:1200px; height:600px; margin:0 auto 30px;">
+                                <img width="600" src="{% static 'images/no_image.jpg' %}" class="ls-bg" alt="No image" />
+                             </div>
+                            {% endfor %}
                         </div>
                     </div>
                     <div class="row mb-4">
