--- a/templates/dashboards/my_admin.html
+++ b/templates/dashboards/my_admin.html
@@ -29,7 +29,7 @@
                         <tr>
                             <td>
                                 {% if project.has_image %}
-                                <img class="rounded" src="/media/{{ project.get_first_image.image }}" alt="">
+                                <img class="rounded" src="/media/{{ project.get_first_image_or_default.image }}" alt="">
                                 {% else %}
                                     <img class="rounded" src="{% static 'images/no_image.jpg' %}" alt="">
                                 {% endif %}
