--- a/templates/main_app/project_detail.html
+++ b/templates/main_app/project_detail.html
@@ -28,7 +28,8 @@
         <div class="row">
             <div class="col-xl-4 order-xl-2">
                 <!-- Property Search -->
-                {% if project.get_developer_username.username == user.username %}
+{#            ToDo:  #}
+                {% if project.developer.username == user.username %}
                 <div class="widget advance_search_widget">
                     <h5 class="mb-30">Admin</h5>
                     <form class="rounded quick-search form-icon-right" action="#" method="post">
