--- a/templates/dashboards/base2.html
+++ b/templates/dashboards/base2.html
@@ -12,9 +12,9 @@
     <meta name="description" content="Uniland - Real Estate HTML5 Template">
     <meta name="keywords" content="real estate, property, property search, agent, apartments, booking, business, idx, housing, real estate agency, rental">
     <meta name="author" content="unicoder">
-    <title>Uniland - Real Estate HTML5 Template</title>
+    <title>Real Estate</title>
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/images/favicon.ico">
+    <link rel="shortcut icon" href="{% static 'images/logo.jpg' %}">
 
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -53,17 +53,17 @@
                     <div class="dashboard-nav-area bg-secondary pt-4">
                         <a class="navbar-brand d-table px-40 py-3 mb-3" href="index.html"><img src="assets/images/logo/dash-logo.png" alt="dashboard logo"></a>
                         <div class="collaps-dashboard m-3 px-3 rounded bg-white text-secondary clearfix d-md-none">
-                            <span>Open Dashboard Navigation</span>
+                            <span>{% trans "Open Dashboard Navigation" %}</span>
                             <span class="flaticon-menu text-secondary flat-mini float-end"></span>
                         </div>
                         <nav class="dashboard-nav nav-light pb-3" id="navbarSupportedContent">
                             <ul class="navbar-nav left-collaps-nav">
                                 <li class="text-white pb-2 pt-4 px-20">Overview</li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="dashboard.html"><i class="flaticon-layers flat-mini pe-2"></i> Dashboard</a>
+                                    <a class="nav-link" href="dashboard.html"><i class="flaticon-layers flat-mini pe-2"></i>{% trans "Dashboard" %}</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="dashboard-message.html"><i class="flaticon-email flat-mini pe-2"></i> Message</a>
+                                    <a class="nav-link" href="dashboard-message.html"><i class="flaticon-email flat-mini pe-2"></i>{% trans "Message" %}</a>
                                 </li>
                                 <li class="text-white pb-2 pt-4 px-20">Manage Listing</li>
                                 <li class="nav-item db-dropdown">
