--- a/templates/main_app/projects_list.html
+++ b/templates/main_app/projects_list.html
@@ -64,14 +64,22 @@
     <div class="col mt-5">
         <nav aria-label="Page navigation example">
             <ul class="pagination pagination-dotted-active justify-content-center">
-                <li class="page-item disabled">
-                    <a class="page-link">Previous Page</a>
-                </li>
-                <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
                 <li class="page-item">
-                    <a class="page-link" href="#">Next Page</a>
+                    {% if page_obj.has_previous %}
+                        <a href="?page={{ page_obj.previous_page_number }}" class="page-link">Previous Page</a>
+                    {% endif %}
+                </li>
+                <li class="page-item active">
+                    <a class="page-link" href="#">{{ page_obj.number }}</a>
+                </li>
+                <span>of</span>
+                <li class="page-item">
+                    <a class="page-link" href="#">{{ page_obj.paginator.num_pages }}</a>
+                </li>
+                <li class="page-item">
+                    {% if page_obj.has_next %}
+                        <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next Page</a>
+                    {% endif %}
                 </li>
             </ul>
         </nav>
