project template (Slider)

--- a/templates/main_app/base1.html
+++ b/templates/main_app/base1.html
@@ -291,9 +291,13 @@
 
     <!-- Javascript Files -->
     <script src="{% static 'js/jquery.min.js' %}"></script>
+    <script src="{% static 'js/greensock.js' %}"></script>
+    <script src="{% static 'js/layerslider.transitions.js' %}"></script>
+    <script src="{% static 'js/layerslider.kreaturamedia.jquery.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/bootstrap-select.min.js' %}"></script>
+    <script src="{% static 'js/piechart/chart.min.js' %}"></script>
     <script src="{% static 'js/jquery.fancybox.min.js' %}"></script>
     <script src="{% static 'js/owl.js' %}"></script>
     <script src="{% static 'js/range/tmpl.js' %}"></script>
@@ -304,7 +308,33 @@
     <script src="{% static 'js/mixitup.min.js' %}"></script>
     <script src="{% static 'js/paraxify.js' %}"></script>
     <script src="{% static 'js/custom.js' %}"></script>
-
+    <script>
+            $('#single-property').layerSlider({
+                sliderVersion: '6.5.0b2',
+                type: 'popup',
+                pauseOnHover: 'disabled',
+                skin: 'photogallery',
+                globalBGSize: 'cover',
+                navStartStop: false,
+                hoverBottomNav: true,
+                showCircleTimer: false,
+                thumbnailNavigation: 'always',
+                tnContainerWidth: '100%',
+                tnHeight: 70,
+                popupShowOnTimeout: 1,
+                popupShowOnce: false,
+                popupCloseButtonStyle: 'background: rgba(0,0,0,.5); border-radius: 2px; border: 0; left: auto; right: 10px;',
+                popupResetOnClose: 'disabled',
+                popupDistanceLeft: 20,
+                popupDistanceRight: 20,
+                popupDistanceTop: 20,
+                popupDistanceBottom: 20,
+                popupDurationIn: 750,
+                popupDelayIn: 500,
+                popupTransitionIn: 'scalefromtop',
+                popupTransitionOut: 'scaletobottom',
+                skinsPath: "{% static 'skins' %}",
+            });
+        </script>
 </body>
-
 </html>
