--- a/templates/dashboards/my_admin.html
+++ b/templates/dashboards/my_admin.html
@@ -28,11 +28,7 @@
                         {% for project in projects %}
                         <tr>
                             <td>
-                                {% if project.has_image %}
-                                <img class="rounded" src="/media/{{ project.get_first_image_or_default.image }}" alt="">
-                                {% else %}
-                                    <img class="rounded" src="{% static 'images/no_image.jpg' %}" alt="">
-                                {% endif %}
+                                <img class="rounded" src="{{ project.get_first_image_or_default }}" alt="">
                                 <div class="property-info d-table">
                                     <h5 class="text-secondary font-400">{{ project.name }}</h5>
                                     <span><i class="fas fa-map-marker-alt text-primary font-13"></i> {{ project.location }}</span>
