fix some essuse

--- a/templates/main_app/projects_list.html
+++ b/templates/main_app/projects_list.html
@@ -60,7 +60,8 @@
 
 
 <!--============== Pagination block ==============-->
-<div class="row">
+{# TODO : include pagination #}
+    <div class="row">
     <div class="col mt-5">
         <nav aria-label="Page navigation example">
             <ul class="pagination pagination-dotted-active justify-content-center">
