Leaflet Maps Support
Add leaflet package support for projects' locations. Also add local_settings file support

--- a/templates/dashboards/base2.html
+++ b/templates/dashboards/base2.html
@@ -1,6 +1,7 @@
 {% load static %}
 {% load i18n %}
 {% load crispy_forms_tags %}
+{% load leaflet_tags %}
 <!doctype html>
 <html lang="en">
 
@@ -39,6 +40,8 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/colors/color.css' %}">
     <link rel="stylesheet" href="{% static 'css/loader.css' %}">
+    {% leaflet_css plugins="ALL" %}
+    {% leaflet_js plugins="ALL" %}
 </head>
 
 <body>
