--- a/templates/dashboards/project_edit.html
+++ b/templates/dashboards/project_edit.html
@@ -1,4 +1,4 @@
-{% extends 'dashboards/base2.html' %}
+{% extends 'dashboards/dashboard_base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
 {% block page_header %}
