--- a/templates/main_app/project_detail.html
+++ b/templates/main_app/project_detail.html
@@ -1,4 +1,4 @@
-{% extends 'main_app/base1.html' %}
+{% extends 'main_app/main_base.html' %}
 {% load static %}
 {% load i18n %}
 {% block page_header %}
