--- a/templates/main_app/projects_list.html
+++ b/templates/main_app/projects_list.html
@@ -1,4 +1,4 @@
-{% extends 'main_app/base1.html' %}
+{% extends 'main_app/main_base.html' %}
 {% load static %}
 {% block page_header %}
 <!--============== Page title Start ==============-->
@@ -60,6 +60,6 @@
 
 
 <!--============== Pagination block ==============-->
-{% include 'global/pagination.html' %}
+{% include 'global/../pagination.html' %}
     <!--============== End Pagination block ==============-->
 {% endblock main_content %}
