--- a/templates/main_app/projects_list.html
+++ b/templates/main_app/projects_list.html
@@ -1,5 +1,6 @@
 {% extends 'main_app/main_base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
 {% block page_header %}
 <!--============== Page title Start ==============-->
 <div class="full-row py-5">
@@ -21,6 +22,12 @@
 {% endblock page_header %}
 
 {% block main_content %}
+{#<div class="row row-cols-xl-3 row-cols-md-2 row-cols-1">#}
+{#    <form action="{% url 'main_app:index' %}">#}
+{#        {{ search_form|crispy }}#}
+{#        <input type="submit" name="search" />#}
+{#    </form>#}
+{#</div>#}
 <div class="row row-cols-xl-3 row-cols-md-2 row-cols-1">
     {% for project in projects %}
     <div class="col">
